--- a/public/style.css
+++ b/public/style.css
@@ -28,11 +28,12 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 0 2rem;
+  height: 8rem;
 }
 
 #navbar-coins {
   display: flex;
-  gap: 1rem;
+  gap: 3rem;
   align-items: center;
   
 }
@@ -53,7 +54,31 @@ nav {
 }
 
 #logo {
-  width: 150px;
+  width: 180px;
+}
+
+.search-box {
+  width: 20%;
+  position: relative;
+  background-color: white;
+  border-radius: 4px;
+}
+
+#input-field {
+  width: 85%;
+  height: 3rem;
+  border: none;
+  border-radius: 4px;
+  padding-left: .5rem;
+  margin-right: 0;
+}
+
+#input-field:focus {
+  outline: none;
+}
+
+.fas {
+  margin: 0 .4rem;
 }
 
 #user-interface {
@@ -64,7 +89,7 @@ nav {
   padding-top: 9rem;
 }
 
-.global-info {
+.global-info-element {
   text-align: center;
   margin-bottom: 2rem;
   font-size: 1.3rem;
@@ -96,8 +121,26 @@ tr.coin-row:hover {
 }
 
 table {
-  width: 95%;
+  width: 95vw;
   font-size: 1.2rem;
+  overflow-x: auto;
+}
+
+@media (max-width: 800px){
+  tr th.disappear-xsm,tr td.disappear-xsm{
+    display:none;
+  }
+}
+
+@media (max-width: 1000px){
+  tr th.disappear-sm,tr td.disappear-sm{
+    display:none;
+  }
+}
+@media (max-width: 1400px){
+  tr th.disappear-mid,tr td.disappear-mid{
+    display:none;
+  }
 }
 
 .coin-logo {
@@ -110,4 +153,8 @@ table {
 
 .increasing {
   color: rgb(0, 102, 0);
+}
+
+.unchanged {
+  color: white;
 }
