--- a/public/style.css
+++ b/public/style.css
@@ -96,11 +96,6 @@ nav {
   text-align: center;
 }
 
-ul {
-  display: inline-block;
-  list-style-type: none;
-}
-
 .global-info-element {
   text-align: center;
   margin-bottom: 2rem;
@@ -175,4 +170,9 @@ table {
 
 .unchanged {
   color: white;
+}
+
+.info {
+  font-size: 3rem;
+  text-align: center;
 }
