--- a/public/style.css
+++ b/public/style.css
@@ -70,7 +70,7 @@ nav {
   flex-shrink: 0;
 }
 
-#input-field {
+.input-field {
   width: 85%;
   height: 3rem;
   border: none;
@@ -79,7 +79,7 @@ nav {
   margin-right: 0;
 }
 
-#input-field:focus {
+.input-field:focus {
   outline: none;
 }
 
@@ -94,6 +94,13 @@ nav {
   align-items: center;
   padding-top: 9rem;
   text-align: center;
+}
+
+#search-box-2 {
+  display: none;
+  border: 1px solid black;
+  width: 80%;
+  margin: 2rem 0;
 }
 
 .global-info-element {
@@ -137,16 +144,24 @@ table {
   tr th.disappear-xsm,tr td.disappear-xsm{
     display:none;
   }
+
 }
 
-@media (max-width: 1000px){
+@media (max-width: 980px){
   tr th.disappear-sm,tr td.disappear-sm{
     display:none;
   }
   #navbar-coins {
     gap: 1rem;
   }
+  #search-box-2 {
+    display: inline-block;
+  }
+  #search-box-1 {
+    display: none;
+  }
 }
+
 @media (max-width: 1400px){
   tr th.disappear-mid,tr td.disappear-mid{
     display:none;
