--- a/public/style.css
+++ b/public/style.css
@@ -101,6 +101,7 @@ nav {
   border: 1px solid black;
   width: 80%;
   margin: 2rem 0;
+  z-index: -1;
 }
 
 .global-info-element {
@@ -140,36 +141,6 @@ table {
   overflow-x: auto;
 }
 
-@media (max-width: 800px){
-  tr th.disappear-xsm,tr td.disappear-xsm{
-    display:none;
-  }
-}
-
-@media (max-width: 980px){
-  tr th.disappear-sm,tr td.disappear-sm{
-    display:none;
-  }
-  #navbar-coins {
-    gap: 1rem;
-  }
-  #search-box-2 {
-    display: inline-block;
-  }
-  #search-box-1 {
-    display: none;
-  }
-}
-
-@media (max-width: 1400px){
-  tr th.disappear-mid,tr td.disappear-mid{
-    display:none;
-  }
-  #navbar-coins {
-    gap: 2rem;
-  }
-}
-
 @media (max-width: 600px){
   tr th.disappear-mobile,tr td.disappear-mobile{
     display: none;
@@ -192,17 +163,23 @@ table {
   #navbar-coins {
     flex-wrap: wrap;
   }
-  
 }
 
-@media (max-width: 1000px){
+@media (max-width: 980px){
   tr th.disappear-sm,tr td.disappear-sm{
     display:none;
   }
   #navbar-coins {
     gap: 1rem;
   }
+  #search-box-2 {
+    display: inline-block;
+  }
+  #search-box-1 {
+    display: none;
+  }
 }
+
 @media (max-width: 1400px){
   tr th.disappear-mid,tr td.disappear-mid{
     display:none;
